# fab-journal

./: .gitignore  .pre-commit-config.yaml  README.md  journal.json  main.py  pyproject.toml  starter_code.py
journal/: __main__.py  cli.py  db.py  models.py
tests/: test_db.py
